@@ -8,11 +8,12 @@ import java.util.List;
 
 @Slf4j
 public class EightQueen {
-    private static List<List<Integer>> container =new ArrayList();
+    private static List<List<Integer>> container = new ArrayList();
 
     public static void main(String[] args) {
         int[][] track = new int[8][8];
-        backtracking(track);
+        List<Integer> nums = new ArrayList<>();
+        backtracking(nums, track);
         for (int i = 0; i < container.size(); i++) {
             log.info(container.get(i).toString());
         }
@@ -23,20 +24,20 @@ public class EightQueen {
             /**
              * 找到底端，终止当前路径
              */
-            if (track.size() == nums.size()) {
-                container.add(new LinkedList<>(track));
+            if (nums.size() == nums.size()) {
+                container.add(new LinkedList<>(nums));
                 return;
             }
             /**
              * 以及选择过的路径，跳过
              */
-            if (track.contains(i)) {
+            if (nums.contains(i)) {
                 continue;
             }
             /**
              * 选择当前路径
              */
-            track.add(i);
+            nums.add(i);
             /**
              * 继续探索下一个路径
              */
@@ -44,7 +45,7 @@ public class EightQueen {
             /**
              * 移除已经终止返回的路径
              */
-            track.removeLast();
+            nums.remove(nums.get(nums.size() - 1));
         }
     }
 }
